# DevHackProjectRepo

./: .gitignore  README.md  pyproject.toml  test.txt
.github/workflows/: lint.yml
src/DevHackProject.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/telegram_assistant/: config.py
src/telegram_assistant/bot/: __main__.py  discpatcher.py
src/telegram_assistant/bot/logic/: __init__.py
src/telegram_assistant/bot/logic/callbackdata/: __init__.py  admin_panel_cb_data.py  main_menu_cb_data.py
src/telegram_assistant/bot/logic/callbacks/: __init__.py  main_menu.py
src/telegram_assistant/bot/logic/commands/: __init__.py  admin_commands.py  start_commands.py
src/telegram_assistant/bot/logic/keyboards/: __init__.py  pagination.py
src/telegram_assistant/bot/logic/states/: __init__.py
src/telegram_assistant/bot/middlewares/: __init__.py  db_middleware.py  perms_check_middleware.py  register_check_middleware.py
src/telegram_assistant/database/: __init__.py  db.py
src/telegram_assistant/database/models/: __init__.py  base.py  user.py
src/telegram_assistant/database/repositories/: __init__.py  abstract.py  user.py
src/telegram_assistant/llm/: context_manager.py  llm_repo.py  yandex_gpt.py
src/telegram_assistant/llm/context/: context_SFU_description.txt  context_admission.txt  context_events.txt
src/telegram_assistant/parser/: base_parser.py  department_parser.py  parser.py  table_parser.py  url_parser.py  vk_parser.py
src/telegram_assistant/parser/repository/: parser_repo.py
(+3 files in other folders)
